Make the toolbar 1 pixel less tall

--- a/iphone/config.ini
+++ b/iphone/config.ini
@@ -3,5 +3,5 @@ template = "iphone"
 		
 # The following lines are disabled, only enable them if you want to connect 
 # to a jukebox which supports the jukeboxConnector standard.
-jukeboxConnector = "/opt/sybhttpd/localhost.drives/HARD_DISK/Apps/MediatankJukebox/connector"
-showFilesystem = true
+#jukeboxConnector = "/opt/sybhttpd/localhost.drives/HARD_DISK/Apps/MediatankJukebox/connector"
+#showFilesystem = true
